--- a/docs/migrations/v2-v3.md
+++ b/docs/migrations/v2-v3.md
@@ -6,7 +6,7 @@
 -   **Structured error messages**. Use the `.format()` method to ZodError to convert the error into a strongly-typed, nested object: [format method](#error-formatting)
 -   **Easier unions**. Use the `or` method to ZodType (the base class for all Zod schemas) to easily create union types like `z.string().or(z.number())`
 -   **Easier intersections**. Use the `and` method to ZodType (the base class for all Zod schemas) to easily create intersection types
--   **Global error customization**. Use `z.setErrorMap(myErrorMap)` to _globally_ customize the error messages produced by Zod: [setErrorMap](ERROR_HANDLING.md#customizing-errors-with-zoderrormap)
+-   **Global error customization**. Use `z.setErrorMap(myErrorMap)` to _globally_ customize the error messages produced by Zod: [setErrorMap](/error-handling#customizing-errors-with-zoderrormap)
 -   **Maps and sets**. Zod now supports [`Map`](#maps) and [`Set`](#set) schemas.
 -   **Optional and nullable unwrapping**. ZodOptional and ZodNullable now have a `.unwrap()` method for retrieving the schema they wrap.
 -   **A new implementation of transformers**. Details below.
@@ -49,4 +49,4 @@
 
 -   **Default values**: default value logic is now implemented inside a `ZodDefault` class, instead of using transformers. (In a previous alpha version of Zod 3, default values were implemented inside the ZodOptional class.)
 
--   There have been small internal changes to the ZodIssue subtypes. See the new subtypes in the [Error Handling guide](ERROR_HANDLING.md). This may impact user who have written a custom error maps. Most users will not be affected.
+-   There have been small internal changes to the ZodIssue subtypes. See the new subtypes in the [Error Handling guide](/error-handling). This may impact user who have written a custom error maps. Most users will not be affected.
